backends/drm: add stricter checks for direct scanout

Buffers with implicit modifiers from another GPU must not be imported, as
the layouts may not be compatible.
For buffers with incompatible modifiers, direct scanout can also be rejected
early, saving some computational power.

BUG: 457851
(cherry picked from commit 6cdb1e6f64c7b81806787670e3ddd3d49d62abc0)