src/backends/drm/drm_backend.h
@@ -65,6 +65,7 @@ public:
     DrmGpu *primaryGpu() const;
     DrmGpu *findGpu(dev_t deviceId) const;
     DrmGpu *findGpuByFd(int fd) const;
+    size_t gpuCount() const;
 
     bool isActive() const;
 
