src/backends/drm/drm_buffer_gbm.cpp
@@ -11,6 +11,7 @@
 #include "gbm_surface.h"
 
 #include "config-kwin.h"
+#include "drm_backend.h"
 #include "drm_gpu.h"
 #include "kwineglutils_p.h"
 #include "logging.h"
